<resources>
    <string name="app_name">Pickup</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">481034845414002</string>
    <string name="cancel">Cancel</string>

    <string name="action_settings">Settings</string>

    <string name="user_profile">User Profile</string>
    <string name="user_logout">Log Out</string>

    <string name="event_name_text">Event Name</string>
    <string name="event_creator_text">Creator</string>
    <string name="event_sport_text">Sport</string>
    <string name="event_location_text">Location</string>
    <string name="event_time_text">Pick a Time</string>
    <string name="event_date_text">Choose a Date</string>
    <string name="event_start_time_text">Pick a Start Time</string>
    <string name="event_end_time_text">Pick an End Time</string>
    <string name="event_start_date_text">Choose a Start Date</string>
    <string name="event_end_date_text">Choose an End Date</string>
    <string name="etxt_fromdate">Dat</string>
    <string name="event_gender_text">Gender</string>
    <string name="event_age_group_text">Age Group</string>
    <string name="event_max_num_ppl_text">Max # Ppl</string>
    <string name="event_min_user_rating_text">Min User Rating</string>

    <string name="event_txt">EVENTS</string>
    <string name="create_event_btn_txt">Create Event</string>
    <string name="share_event_btn_txt">Share Event</string>
    <string name="edit_event_btn_txt">Edit Event</string>
    <string name="delete_event_btn_txt">Delete Event</string>
    <string name="save_changes_event_btn_txt">Save Changes</string>

    <string-array name="gender_array">
        <item>Coed</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <string-array name="gender_array2">
        <item></item>
        <item>Any</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="hello"></string>
    <string name="prompt">Choose a Sport</string>
    <string name="sport_category_prompt">Choose a Category</string>
    <string name="sport_environment_prompt">Choose an Environment</string>
    <string name="sport_terrain_prompt">Choose a Terrain</string>
    <string name="sport_skill_level_prompt">Choose a Skill Level</string>
    <drawable name="white">#ffffff</drawable>
    <drawable name="black">#000000</drawable>
    <drawable name="green">#347C2C</drawable>
    <drawable name="pink">#FF00FF</drawable>
    <drawable name="violet">#a020f0</drawable>
    <drawable name="grey">#778899</drawable>
    <drawable name="red">#C11B17</drawable>
    <drawable name="yellow">#FFFF8C</drawable>
    <drawable name="PowderBlue">#b0e0e6</drawable>
    <drawable name="brown">#2F1700</drawable>
    <drawable name="Hotpink">#7D2252</drawable>
    <string name="select_Category">Select Category</string>
    <drawable name="darkgrey">#606060</drawable>

    <string name="login_pickup_text">PickUp</string>
    <string name="login_email_text">Email</string>
    <string name="login_password_text">Password</string>
    <string name="login_btn_txt">Login</string>

    <string name="edit_label_text">Edit Settings</string>
    <string name="save_settings_btn_txt">Save</string>
    <string name="forgot_passwd_btn_txt"><u>Forgot Your Password?</u></string>
    <string name="reset_paswd_btn_txt">Reset Password</string>
    <string name="create_acct_label_text">Create Account</string>
    <string name="create_acct_first_name_text">First Name</string>
    <string name="create_acct_last_name_text">Last Name</string>
    <string name="create_acct_email_text">Email</string>
    <string name="create_acct_password_text">Password</string>
    <string name="create_acct_retype_text">Retype Password </string>
    <string name="create_acct_gender_text">Gender</string>
    <string name="create_acct_male_text">Male</string>
    <string name="create_acct_female_text">Female</string>
    <string name="create_acct_bday_text">Birthday</string>
    <string name="create_acct_day_text">Day</string>
    <string name="create_acct_month_text">Month</string>
    <string name="create_acct_year_text">Year</string>

    <string name="create_acct_btn_txt">Create Account</string>
    <string name="cancel_btn_txt">Cancel</string>
    <string name="upload_btn_txt">Upload Picture</string>

    <string name="password_rest_label">Reset Password</string>
    <string name="old_text">Current</string>
    <string name="new_text">New</string>
    <string name="retype_text">Retype New</string>

    <string name="send_email_btn_txt">Send Email</string>
    <string name="rest_desc_text">Please enter your email address and we will send you instructions for resetting your password:</string>
    <string name="rest_passwd_label_txt">Reset Password</string>
    <string-array name="sport_array_default">
        <item>Badminton</item>
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Football</item>
        <item>Handball</item>
        <item>Ice Hockey</item>
        <item>Racquetball</item>
        <item>Roller Hockey</item>
        <item>Soccer</item>
        <item>Softball</item>
        <item>Tennis</item>
        <item>Volleyball</item>
        <item>Running</item>
        <item>Weightlifting</item>
        <item>Yoga</item>
    </string-array>
    <string-array name="sport_array_exclusion">
        <item>Badminton</item>
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Football</item>
        <item>Handball</item>
        <item>Ice Hockey</item>
        <item>Racquetball</item>
        <item>Roller Hockey</item>
        <item>Soccer</item>
        <item>Softball</item>
        <item>Tennis</item>
        <item>Volleyball</item>
    </string-array>
    <string-array name="indoor_outdoor">
        <item>Indoor</item>
        <item>Outdoor</item>
    </string-array>
    <string-array name="bday_month_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    // create event arrays sb
    // Badminton, Racquetball,Roller Hockey,Handball
    <string-array name="Terrain_Default">
        <item>Hardwood</item>
        <item>Cement</item>
        <item>Multi-Purpose</item>
    </string-array>
    <string-array name="Terrain_Baseball_Softball">
        <item>Dirt</item>
        <item>Grass</item>
        <item>Turf</item>
    </string-array>
    <string-array name="Terrain_Basketball">
        <item>Hardwood</item>
        <item>Cement</item>
        <item>Multi-Purpose</item>
        <item>Advanced Multi-Purpose</item>
    </string-array>
    <string-array name="Terrain_Football">
        <item>Grass</item>
        <item>Turf</item>
    </string-array>
    <string-array name="Terrain_Ice_Hockey">
        <item>Ice Rink</item>
    </string-array>
    <string-array name="Terrain_Running">
        <item>Asphalt</item>
        <item>Cement</item>
        <item>Beach</item>
        <item>Grass</item>
        <item>Trail</item>
    </string-array>
    <string-array name="Terrain_Soccer">
        <item>Asphalt</item>
        <item>Beach</item>
        <item>Grass</item>
        <item>Turf</item>
        <item>Multi-Purpose</item>
    </string-array>
    <string-array name="Terrain_Tennis">
        <item>Clay</item>
        <item>Hard</item>
        <item>Grass</item>
        <item>Carpet</item>
    </string-array>
    <string-array name="Terrain_Volleyball">
        <item>Beach</item>
        <item>Grass</item>
        <item>Multi-Purpose</item>
    </string-array>

    <string-array name="Event_Skill_Level">
        <item>Beginner</item>
        <item>Novice</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>
    <string-array name="Sport_Specific_Weightlifting">
        <item>Full Body</item>
        <item>Upper Body</item>
        <item>Lower Body</item>
        <item>Push</item>
        <item>Pull</item>
    </string-array>

    <string-array name="Sport_Specific_Hockey">
        <item>Ball</item>
        <item>Puck</item>
    </string-array>

    <string-array name="Sport_Specific_Football">
        <item>Flag</item>
        <item>Tackle</item>
    </string-array>

    <string-array name="Create_Event_Categories">
        <item>Tournament</item>
        <item>Training</item>
        <item>Pick Up</item>
    </string-array>

    <string-array name="Create_Event_Categories_Exclusion">
        <item>Pick Up</item>
    </string-array>
    // end of create event arrays sb


    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <string name="date_created">Date Created</string>
    <string name="date_event">Event Date</string>
    <string name="time_event">Event Time</string>
    <string name="age_range">Age Range </string>
    <string name="date_format"> dd-mm-yyyy </string>
    <string name="time_format">hh:mm</string>
    <string name="open_events">Open Events Only</string>
    <string name="between">between</string>
    <string name="and">and </string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>