<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UserProfileFragment">

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        appcompat:showAsAction="ifRoom|collapseActionView"
        appcompat:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/map"
        android:orderInCategory="1"
        android:title="Map"
        />
    <item android:id="@+id/calendar"
        android:orderInCategory="2"
        android:title="Calendar"

        />
    <item
        android:id="@+id/user_profile"
        android:orderInCategory="3"
        android:title="@string/user_profile"
        />
    <item
        android:id="@+id/edit_settings"
        android:orderInCategory="4"
        android:title="Edit Settings"
        />
    <item android:id="@+id/user_logout"
        android:orderInCategory="5"
        android:title="@string/user_logout"

        />


</menu>