<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/eventLinearLayout1"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
            <ImageView
                android:id="@+id/frag1_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        <TextView
            android:id="@+id/eventTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_label_text"
            android:textColor="@color/orange"
            android:textSize="30dp"
            android:layout_weight=".99"
            android:textStyle="bold"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

    </LinearLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <TableRow
                android:id="@+id/createAccountTableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 >


                <EditText
                    android:id="@+id/first_name"
                    android:hint="@string/create_acct_first_name_text"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="8"
                    android:scrollHorizontally="true"
                    android:fadeScrollbars="false"
                    android:textColor="@color/orange"
                    android:scrollbars="horizontal"
                    android:inputType="text"
                    android:textSize="25dp">
                    <requestFocus />
                </EditText>
            </TableRow>
            <TableRow
                android:id="@+id/createAcountTableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 >

                <EditText
                    android:id="@+id/last_name"
                    android:hint="@string/create_acct_last_name_text"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="8"
                    android:scrollHorizontally="true"
                    android:fadeScrollbars="false"
                    android:textColor="@color/orange"
                    android:scrollbars="horizontal"
                    android:inputType="text"
                    android:textSize="25dp">
                    <requestFocus />
                </EditText>
            </TableRow>
            </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TableRow
                android:id="@+id/createAccountTableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" >

                <TextView
                    android:id="@+id/createAccountView5"
                    android:textColor="@color/orange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_acct_gender_text"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <RadioButton android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:text="@string/create_acct_male_text" />
                    <RadioButton android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/orange"
                        android:text="@string/create_acct_female_text" />
                </RadioGroup>

            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/createAccountTextView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:text="@string/create_acct_bday_text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/bday_month_spinner"
                    android:textColor="@color/orange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/bday_day_spinner"
                    android:textColor="@color/orange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Spinner
                    android:id="@+id/bday_year_spinner"
                    android:textColor="@color/orange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </TableLayout>
  \


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/upload_photo_btn"
                android:text="@string/upload_btn_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_weight=".99"></Button>
            <Button
                android:id="@+id/reset_passwd_btn"
                android:text="@string/reset_paswd_btn_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_weight=".99"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/save_btn"
                android:text="@string/save_settings_btn_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/orange"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_weight=".99"></Button>
            <Button
                android:id="@+id/cancel_btn"
                android:text="@string/cancel_btn_txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/orange"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_weight=".99"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>